--- a/src/sass/pages/_Mission.scss
+++ b/src/sass/pages/_Mission.scss
@@ -12,6 +12,8 @@
 
     margin-top: -17vw;
     padding-bottom: 5vh;
+    // this affects the cards that did not have enough space from the above section (green card
+    padding-top: 10vh;
 
     background-image: linear-gradient(
         to right bottom,
